--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,9 @@
 * {
-  background-color: lightgrey;
 }
 
 body {
-  font-family: 'Dosis', sans-serif;
+  background-color: lightgrey;
+  font-family: "Dosis", sans-serif;
 }
 
 header {
@@ -14,7 +14,6 @@ header {
 nav {
   display: flex;
   justify-content: center;
-
 }
 
 .nav-button {
@@ -24,41 +23,40 @@ nav {
 }
 
 h1 {
-  font-family: 'Dosis', sans-serif;  
+  font-family: "Dosis", sans-serif;
   margin: 0px;
 }
 
 main {
   display: grid;
-  grid-template-areas: 
-  'a b c d e';
+  grid-template-areas: "a b c d e";
   grid-gap: 10px;
 }
 
 .a {
   grid-area: a;
-  background-color: blue;
+  background-color: #000000;
   height: 350px;
 }
 
 .b {
   grid-area: b;
-  background-color: green;
+  background-color: #000000;
 }
 
 .c {
   grid-area: c;
-  background-color: cornflowerblue;
+  background-color: #000000;
 }
 
 .d {
   grid-area: d;
-  background-color: wheat;
+  background-color: #000000;
 }
 
 .e {
   grid-area: e;
-  background-color: chocolate;
+  background-color: #000000;
 }
 
 .unlock {
@@ -79,7 +77,6 @@ main {
   justify-content: center;
 }
 
-
 img {
   display: flex;
   justify-content: flex-start;
@@ -91,10 +88,56 @@ img {
 
 .project-header {
   display: flex;
-  justify-content:center;
+  justify-content: center;
 }
 
 .project-name-input {
   background-color: white;
-  border-radius: 10px
+  border-radius: 10px;
+}
+
+.project-name {
+  display: inline;
+}
+
+.trash-btn {
+  display: inline;
+  background-image: url(../assets/waste-bin.svg);
+  background-repeat: no-repeat;
+  height: 20px;
+}
+
+.swatch1 {
+  display: inline-block;
+  height: 15px;
+  background-color: transparent;
+  width: 15px;
+}
+
+.swatch2 {
+  display: inline-block;
+  height: 15px;
+  background-color: transparent;
+  width: 15px;
+}
+
+.swatch3 {
+  display: inline-block;
+  height: 15px;
+  background-color: transparent;
+  width: 15px;
+}
+
+.swatch4 {
+  display: inline-block;
+  height: 15px;
+  background-color: transparent;
+  width: 15px;
+}
+
+.swatch5 {
+  display: inline-block;
+  height: 15px;
+  background-color: transparent;
+  width: 15px;
 }
