Add palette name input, Work on saving palette to DB with Project Id

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -111,6 +111,17 @@ img {
   border-radius: 10px;
 }
 
+.save-palette {
+  margin: 0px 30px 0px 30px;
+}
+
+.projects-form {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .project-name {
   display: inline;
 }
